moku-macros/tests/machine_module/not_on_module.rs
extern crate moku_macros as moku;

use moku::*;

#[state_machine]
mod blinky {
    use moku::*;

    #[machine_module]
    struct Module {}
}

fn main() {}
